patch aarch64-rust dependency to use local version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ git = "https://github.com/Harry-R/rust-aarch64.git"
 branch = "eduos"
 default-features = false
 
+[patch."https://github.com/Harry-R/rust-aarch64.git"]
+aarch64 = {path = "../rust-aarch64"}
+
 [package.metadata.cargo-xbuild]
 memcpy = true
 
