--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
 
 [dependencies]
 spin = "0.4.9"	# Spinlocks.
+cortex-a = "2.3.1"
+register = "0.3.2"
 # bootimage = "0.6.6"
 # bootloader = "0.3.4"
 
