remove spinlocks to support aarch64

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ license = "MIT"
 authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
 
 [dependencies]
-spin = "0.4.9"	# Spinlocks.
+#spin = "0.4.9"	# Spinlocks.
 cortex-a = "2.3.1"
 register = "0.3.2"
 r0 = "0.2.2"
